# tiny-dfs

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/common/: error.rs  mod.rs  registration.rs  service.rs  storage.rs
lib/src/naming/: dir_tree.rs  mod.rs  registration.rs  server.rs  service.rs
lib/src/naming/api/: mod.rs  registration.rs  service.rs
lib/src/storage/: command.rs  mod.rs  path.rs
lib/src/storage/api/: command.rs  storage.rs
lib/tests/: naming.rs  service.rs  storage.rs
lib/tests/common/: mod.rs
scripts/: naming_run.sh  storage_run.sh
src/: main.rs
src/common/: mod.rs  registration.rs
src/naming/: dir_tree.rs  error.rs  mod.rs  registration.rs  server.rs
src/storage/: mod.rs
