[package]
name = "tiny-dfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.1", features = ["json", "msgpack", "uuid"]}
once_cell = "1.19.0"
log = "0.4"
env_logger = "0.8"
reqwest = {version = "0.12.4", features = ["json"]}