[package]
name = "tiny_dfs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json", "msgpack", "uuid"]}
once_cell = "1.19.0"
log = "0.4"
env_logger = "0.8"
reqwest = {version = "0.12.4", features = ["json"]}
tokio = {version = "1.6.1", features = ["macros"]}
rand = "0.8"
base64 = {version = "0.22.1", features = ["std"]}